@@ -100,3 +100,4 @@ v 1.8:
 	- Changed over to a reflection method for populating superperms as Bukkit lags when you handle permissions one at a time.
 	- Major, MAJOR changes to support partial/full world mirroring.
 	  You can now mirror groups.yml, users.yml or both files between different worlds.
+	- Catch NullPointerErrors generated by blank permission nodes.
